[Fix] Shoudn't have used literally the same variable not available in action context

--- a/action.yml
+++ b/action.yml
@@ -7,7 +7,7 @@ description: Sends notification via REST Gateway
 
 inputs:
   github_token:
-    description: 'Pass the ${{secrets.GITHUB_TOKEN}}'
+    description: 'Pass the secrets.GITHUB_TOKEN variable'
     type: string
     required: true
 
