--- a/action.yml
+++ b/action.yml
@@ -89,14 +89,14 @@ runs:
 
 
     - name: Fail if version file content is empty
-      if: >-
-        inputs.fail_on_error == true &&
-        steps.planned_version.outputs.planned_version == ""
+      if: inputs.fail_on_error == true
       id: fail_planned_version
       shell: bash
       run: |
-        echo "Version file '${{inputs.version_filename}}' empty!"
-        exit 3
+        if [[ -z "${{ steps.planned_version.outputs.planned_version }}" ]]; then
+          echo "Version file '${{inputs.version_filename}}' empty!"
+          exit 3
+        fi
 
 
     - name: Lookup planned tag
