[Fix] Should have fetched repo before doing stuff

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -21,6 +21,12 @@ jobs:
       branch_name: ${{ steps.validate_new_version.outputs.branch_name }}
 
     steps:
+
+      - name: Check out code
+        uses: actions/checkout@v2
+        with:
+          fetch-depth: 0
+
       - name: Use latest released action
         id: validate_new_version
         uses: reinvented-stuff/validate-version-action@master
