[Change] Switching to changelog-render-action. Improved readme readability.

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -83,37 +83,11 @@ jobs:
 
       - name: Generate changelog
         id: generate_changelog
-        shell: bash
-        run: |
-          described=$(git describe --tags || git rev-list --max-parents=0 HEAD)
-          described_parts=( ${described//-/ } )
-          current_tag=${described_parts[0]}
-
-          changelog_filename=".changelog"
-          release_changelog_filename=".release_changelog"
-          echo "current_tag=${current_tag}"
-
-          echo "Listing current changes..."
-          git log --pretty=oneline --format='%w(1000)* %cd %an <%ae>%n%w(60,0,2)- %s%n' --date="format:%a %b %d %Y" "$current_tag"..HEAD | tee "${changelog_filename}"
-          git log --pretty=oneline --format='%w(200,0,2)- %s (%an <%ae>)' --date="format:%a %b %d %Y" "$current_tag"..HEAD | sort | tee "${release_changelog_filename}"
-
-          echo "Changelog file..."
-          cat .changelog
-
-          echo "Preparing a GitHub Release Changelog"
-          cat << EOF > "${release_changelog_filename}"
-          Changelog
-          =========
-
-          $(cat "${release_changelog_filename}")
-          EOF
-
-          echo "::set-output name=changelog_filename::${changelog_filename}"
-          echo "::set-output name=release_changelog_filename::${release_changelog_filename}"
-
-
-      - name: Display changelog
-        run: echo "${{ steps.generate_changelog.outputs.changelog }}"
+        uses: reinvented-stuff/changelog-render-action@master
+        with:
+          long_changelog_export_filename: ".long_changelog.md"
+          short_changelog_export_filename: ".short_changelog.md"
+          print_out_changelogs: true
 
 
       - name: Create a new tag
@@ -168,7 +142,7 @@ jobs:
         with:
           tag_name: ${{env.PLANNED_VERSION}}
           release_name: v${{env.PLANNED_VERSION}}
-          body_path: ${{steps.generate_changelog.outputs.release_changelog_filename}}
+          body_path: ${{steps.generate_changelog.outputs.short_changelog_export_filename}}
           draft: false
           prerelease: false
 
